add images, script and styles

--- a/index.html
+++ b/index.html
@@ -8,8 +8,71 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <main>
-    
+  <main class="memory-game">
+    <div class="card" data-card="c3po">
+      <img src="img/c3po.png" alt="C3PO" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="chewbacca">
+      <img src="img/chewbacca.png" alt="Chewbacca" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="darth">
+      <img src="img/darth.png" alt="Darth Vader" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="kenobi">
+      <img src="img/kenobi.png" alt="Obi-One Kenobi" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="luke">
+      <img src="img/luke.png" alt="Luke Skywalker" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="r2d2">
+      <img src="img/r2d2.png" alt="R2D2" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="stormtrooper">
+      <img src="img/stormtrooper.png" alt="Stormtrooper" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="yoda">
+      <img src="img/yoda.png" alt="Yoda" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="c3po">
+      <img src="img/c3po.png" alt="C3PO" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="chewbacca">
+      <img src="img/chewbacca.png" alt="Chewbacca" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="darth">
+      <img src="img/darth.png" alt="Darth Vader" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="kenobi">
+      <img src="img/kenobi.png" alt="Obi-One Kenobi" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="luke">
+      <img src="img/luke.png" alt="Luke Skywalker" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="r2d2">
+      <img src="img/r2d2.png" alt="R2D2" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="stormtrooper">
+      <img src="img/stormtrooper.png" alt="Stormtrooper" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
+    <div class="card" data-card="yoda">
+      <img src="img/yoda.png" alt="Yoda" class="card-front">
+      <img src="img/logo.png" alt="Verso da carta" class="card-back">
+    </div>
   </main>
   <script src="js/script.js"></script>
 </body>
