--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+  <header>
+    <h1>Lego Star Wars Memory Game</h1>
+    <div class="scoreboard">
+      <h2>Score: <span id="score">0</span></>
+      <h2>Top Score: <span id="topScore">0</span></>      
+    </div>
+  </header>
   <main class="memory-game">
     <div class="card" data-card="c3po">
       <img src="img/c3po.png" alt="C3PO" class="card-front">
